# PatientHandler

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/patient_handler/: main.py
src/patient_handler/api/: endpoints.py  pages.py
src/patient_handler/database/domain/: database.py
src/patient_handler/database/domain/models/: db_patient.py
src/patient_handler/patients/domain/: input_patient.py  patient_repository.py
src/patient_handler/patients/infrastructure/: sqlite_patient_repository.py
src/patient_handler/templates/: base.html
